// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm Container LoginForm component should match the LoginForm Snapshot when error occurs 1`] = `
<section
  className="login-section"
>
  <div
    className="form-container"
  >
    <h1
      className="form-title"
    >
      Login
    </h1>
    <h1
      className="error-styling"
    >
      Error!
    </h1>
    <form
      onSubmit={[Function]}
    >
      <div
        className="input-container"
      >
        <label
          htmlFor="email-input"
        >
          Email:
        </label>
        <input
          id="email-input"
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          type="text"
          value=""
        />
      </div>
      <div
        className="input-container"
      >
        <label
          htmlFor="password-input"
        >
          Password:
        </label>
        <input
          id="password-input"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="text"
          value=""
        />
      </div>
      <button
        className="submit-btn"
      >
        Submit
      </button>
    </form>
  </div>
</section>
`;

exports[`LoginForm Container LoginForm component should match the LoginForm Snapshot when no one is logged in 1`] = `
<section
  className="login-section"
>
  <div
    className="form-container"
  >
    <h1
      className="form-title"
    >
      Login
    </h1>
    <h1
      className="error-styling"
    />
    <h1
      className="error-styling"
    />
    <form
      onSubmit={[Function]}
    >
      <div
        className="input-container"
      >
        <label
          htmlFor="email-input"
        >
          Email:
        </label>
        <input
          id="email-input"
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          type="text"
          value=""
        />
      </div>
      <div
        className="input-container"
      >
        <label
          htmlFor="password-input"
        >
          Password:
        </label>
        <input
          id="password-input"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="text"
          value=""
        />
      </div>
      <button
        className="submit-btn"
      >
        Submit
      </button>
    </form>
  </div>
</section>
`;

exports[`LoginForm Container LoginForm component should match the LoginForm Snapshot when user is logged in 1`] = `
<Redirect
  to="/"
/>
`;
